fix overflow issues, fix touchscreen zooming

--- a/theme.css
+++ b/theme.css
@@ -19,12 +19,12 @@ button {
   color: var(--dark);
   border: 1px solid var(--light);
   border-radius: 0 6px 6px 6px;
-  font-size: 1.25em;
+  font-size: 24px;
 
   cursor: pointer;
 
-  min-width: 2em;
-  height: 4vh;
+  min-width: 48px;
+  min-height: 48px;
   padding: 0.2em;
   margin: 1px;
 }
@@ -80,10 +80,6 @@ html, body {
 }
 
 #buttons {
-  top: 0;
-  left: 0;
-  position: absolute;
-  padding: 0.5vh 0.5em;
   display: flex;
   z-index: 3;
 }
@@ -92,15 +88,15 @@ html, body {
   top: 0;
   left: 0;
   position: absolute;
-  height: 100%;
-  padding: 0.5vh 0 0 0.5em;
+  display: flex;
+  margin: 6px 6px;
   z-index: 2;
+  max-height: 99%;
+  flex-direction: column;
 }
 
 #maplist {
-  margin-top: 6vh;
-  overflow: scroll;
-  height: 93vh;
+  overflow: auto;
   overflow-x: hidden;
 }
 
